fix off-center carousel on desktop

--- a/src/app/ambassador/ambassador.component.scss
+++ b/src/app/ambassador/ambassador.component.scss
@@ -58,7 +58,7 @@
   align-items: center;
 
   height: 12rem;
-  margin: -5rem 0 -2rem 0;
+  margin: -6rem 0 -2rem 0;
 
   &>img {
     cursor: pointer;
